@@ -1,3 +1,9 @@
+2011-08-10  DJ Delorie  <dj@redhat.com>
+
+	* expr.c (expand_expr_addr_expr_1): Detect a user request for
+	a local frame in a naked function, and produce a suitable
+	error for that specific case.
+
 2011-08-09  Martin Jambor  <mjambor@suse.cz>
 
 	PR middle-end/49923
